2010-02-04  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/42952
	* gcc.dg/torture/pr42952.c: New testcase.

2010-01-31  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/42898
	* gcc.dg/torture/pr42898-2.c: New test.

2010-01-31  Richard Guenther  <rguenther@suse.de>

	* gcc.dg/torture/pr42898.c: Skip -O0.

2010-01-31  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42898
	* gcc.dg/torture/pr42898.c: New testcase.

2010-01-18  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42774
	* gcc.target/alpha/pr42774.c: New test.

2010-01-17  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2010-01-13  Steve Ellcey  <sje@cup.hp.com>

	PR target/42542
	* gcc.target/ia64/pr42542-1.c: New.
	* gcc.target/ia64/pr42542-2.c: New.
	* gcc.target/ia64/pr42542-3.c: New.

2010-01-07  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-01-05  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/42542
	* gcc.target/i386/pr42542-1.c: New.
	* gcc.target/i386/pr42542-1a.c: Likewise.
	* gcc.target/i386/pr42542-1b.c: Likewise.
	* gcc.target/i386/pr42542-2.c: Likewise.
	* gcc.target/i386/pr42542-2a.c: Likewise.
	* gcc.target/i386/pr42542-2b.c: Likewise.
	* gcc.target/i386/pr42542-3.c: Likewise.
	* gcc.target/i386/pr42542-3a.c: Likewise.

2010-01-05  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/tls/opt-15.c: New test.

2009-12-30  Ian Lance Taylor  <iant@google.com>

	PR middle-end/42099
	* gcc.c-torture/execute/20091229-1.c: New test.

2009-12-30  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42549
	* gcc.target/i386/mmx-3dnow-check.h: New file.
	* gcc.target/i386/pr42549.c: New test.

2009-12-23  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/PR42422
	* gfortran.dg/list_read_10.f90:  New test.

2009-11-23  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42113
	* gcc.target/alpha/pr42113.c: New test.

2009-11-20  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/42090
	* gfortran.dg/direct_io_11.f90: New test.
