@@ -1,3 +1,11 @@
+2010-02-04  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/42901
+	* gfortran.dg/namelist_60.f90: New test.
+	* gfortran.dg/namelist_59.f90: New test.
+	* gcc/testsuite/gfortran.dg/namelist_47.f90: Update test.
+	* gcc/testsuite/gfortran.dg/namelist_40.f90: Update test.
+	
 2010-02-04  Richard Guenther  <rguenther@suse.de>
 
 	PR rtl-optimization/42952
